hphp/hack/test/typecheck/like_types/dynamic_coercion/like_decl_types/tfun.php.exp
File "tfun.php", line 4, characters 12-33:
Invalid return type (Typing[4110])
File "tfun.php", line 4, characters 40-60:
This is a function
File "tfun.php", line 4, characters 12-33:
It is incompatible with a dynamic value
